--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ display_categories: ['differential-equations', 'linear-algebra','calculus' ] # t
 scholar:
 
   last_name: [F.]
-  first_name: [Grant, W.]
+  first_name: [Taylor, G.]
 
   style: apa
   locale: en
