--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  best way to contact me is through discord (taylornix). please send a message when adding.
+  best way to contact me is through discord (eigentaylor). please send a message when adding.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
